reports/content/lessons/suppl/python-snippets.err.log
Traceback (most recent call last):
  File "C:\Users\Peter\.conda\envs\automated_metashape\lib\site-packages\jupyter_cache\executors\utils.py", line 64, in single_nb_execution
    **kwargs,
  File "C:\Users\Peter\.conda\envs\automated_metashape\lib\site-packages\nbclient\client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\Peter\.conda\envs\automated_metashape\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\Peter\.conda\envs\automated_metashape\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\Peter\.conda\envs\automated_metashape\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "C:\Users\Peter\.conda\envs\automated_metashape\lib\site-packages\nbclient\client.py", line 552, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\Users\Peter\.conda\envs\automated_metashape\lib\site-packages\nbclient\client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\Users\Peter\.conda\envs\automated_metashape\lib\site-packages\nbclient\client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from myst_nb import glue
import inspect

def read_file_content(filename):
    with open(filename) as f:
        a = f.read()
    return a

tie_point_filter = """A"""
    """
glue("tie_point_filter", tie_point_filter)
------------------

[1;36m  File [1;32m"C:\Users\Peter\AppData\Local\Temp\ipykernel_97464\676678977.py"[1;36m, line [1;32m10[0m
[1;33m    """[0m
[1;37m    ^[0m
[1;31mIndentationError[0m[1;31m:[0m unexpected indent

IndentationError: unexpected indent (676678977.py, line 10)

